Fix: Prevent navbar overlap with expanded table

--- a/src/App.scss
+++ b/src/App.scss
@@ -3836,7 +3836,8 @@ footer {
     .home-left,
     .home-right {
       &.expanded {
-        width: 73rem;
+        max-width: 73rem;
+        width: 100%;
       }
     }
 
